--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,7 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
-'on':
+"on":
   push:
     branches:
       - master
@@ -14,9 +14,12 @@ jobs:
       - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FIR_DEMO_55BB1 }}'
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_FIR_DEMO_55BB1 }}"
           channelId: live
           projectId: fir-demo-55bb1
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
+          SERVER_URL: "${{ secrets.SERVER_URL }}"
+          WEBSOCKET_URL: "${{ secrets.WEBSOCKET_URL }}"
+          SKYWAY_KEY: "${{ secrets.SKYWAY_KEY }}"
