--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/main.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --config webpack.react.browser.js --mode development",
-    "build": "webpack --config webpack.react.browser.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.react.browser.js  --mode production"
   },
   "keywords": [],
   "author": "",
