--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -2,17 +2,21 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on PR
-'on': pull_request
+"on": pull_request
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
+        env:
+          SERVER_URL: "${{ secrets.SERVER_URL }}"
+          WEBSOCKET_URL: "${{ secrets.WEBSOCKET_URL }}"
+          SKYWAY_KEY: "${{ secrets.SKYWAY_KEY }}"
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FIR_DEMO_55BB1 }}'
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_FIR_DEMO_55BB1 }}"
           projectId: fir-demo-55bb1
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
